Accordion tab overflow fix, closes #216

--- a/prototypes/section/app.css
+++ b/prototypes/section/app.css
@@ -55,8 +55,8 @@
 .accordion section.section .title:after {
   content: "\e75e";
   position: absolute;
-  top: 12px;
-  right: 6px;
+  top: 6px;
+  right: 10px;
   font-family: 'fontello';
   font-style: normal;
   font-weight: normal;
@@ -69,8 +69,8 @@
 
 .accordion section.auto.active .title:after,
 .accordion section.section.active .title:after {
-  top: 10px;
-  right: 7px;
+  top: 8px;
+  right: 10px;
   -webkit-transform: rotate(270deg);
       -ms-transform: rotate(270deg);
           transform: rotate(270deg);
@@ -82,8 +82,13 @@
 @media screen and (max-width: 768px) {
   .auto section.auto .title:after,
   .auto section.section .title:after {
-    top: 12px;
-    right: 6px;
+    content: "\e75e";
+    position: absolute;
+    top: 8px;
+    right: 10px;
+    font-family: 'fontello';
+    font-style: normal;
+    font-weight: normal;
     -webkit-transform: rotate(90deg);
         -ms-transform: rotate(90deg);
             transform: rotate(90deg);
@@ -93,8 +98,8 @@
 
   .auto section.auto.active .title:after,
   .auto section.section.active .title:after {
-    top: 10px;
-    right: 7px;
+    top: 6px;
+    right: 10px;
     -webkit-transform: rotate(270deg);
         -ms-transform: rotate(270deg);
             transform: rotate(270deg);
